# intric

./: .env.production.example  .gitignore  README.md  build_and_push.sh  docker-compose.yml
backend/: .env.local.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 000000000000_00ada6bdd27a_remove_unique_usernames.py  000000000000_0233c0d35970_predefined_roles.py  000000000000_024d9a6c22af_add_uuid_to_questions.py  000000000000_0349084e00b0_add_quota_columns.py  000000000000_06db4f2e8a23_set_group_id_non_nullable.py  000000000000_078b637bd9d5_embedding_models_relationships.py  000000000000_0b355bff351a_replace_jobs_int_pk_with_uuid.py  000000000000_0ba68e5351dc_websites_space_id.py  000000000000_0eff8cfe5d1a_.py  000000000000_1075a164c954_users_deleted_at.py  000000000000_116db4f9d44e_change_file_questions_to_questions_files.py  000000000000_13a322c49dd7_.py  000000000000_15653e0a4395_replace_steps_int_pk_with_uuid.py  000000000000_1849acd7ad19_require_completion_model_id.py  000000000000_18eea234eb76_merge_roles_and_tenant_quota_limits.py  000000000000_1922038b807a_replace_roles_int_pk_with_uuid.py  000000000000_1ac150bc6360_add_feedback_to_sessions.py  000000000000_1b00efd60345_add_json_schema.py  000000000000_1e4944f4d28c_add_tenant_display_name.py  000000000000_217005c19b2c_multiple_groups_to_an_assistant.py  000000000000_22420aa2e86c_.py  000000000000_22ca5bc4d9d3_.py  000000000000_23a1ea2518cf_.py  000000000000_26b6ab68a5a9_groups_space_id.py  000000000000_2757a8c54d1b_set_references_as_foreign_key_on_info_.py  000000000000_27d656b25656_.py  000000000000_29dd8db386e1_remove_index_type_and_is_public.py  000000000000_2b88a8ef82ac_replace_logging_int_pk_with_uuid.py  000000000000_2b9ef0edd2fc_add_tenant.py  000000000000_2c2c43bb1a97_replace_agents_int_pk_with_uuid.py  (+176 more)
backend/tests/: fixtures.py
(+727 files in other folders)
